* Added version number to message at top of menu (Chris T, 3600009)
* Added wrapper div around pricegroup field in contact screen to allow cssp,
Chris T.
* Fixed inverted tax numbers in vendor taxable sales report (Chris T, 3600002)
* Fixed cash/receipt and payment screen calculating to pay wrong (Chris T,
3599995)
* Fixed net-0 transactions not showing up on search (Chris T, 3600700)

Changelog for 1.3.28
* Added db list to setup.pl when no db is entered and credentials allow login
  to "postgres" db. (Chris T)
* Added copy db utility to setup.pl for testing dbs (Chris T)
* Fixing is_zero errors on ar/ap transaction screens w/tax incldued (Chris T)
* Fixing csv ar transactions not showing taxes (Chris T, 3589640)
* Fixing demo quotations having descriptions taking too much space (Chris T)
* Moved to label/button system for deleting lines on invoices (Chris T)
* Fixing extra blank lines showing up on ar/ap trans screen on save (Chris T)
* Changing xetex demos to use Liberation font (Chris T, h/t Erik H)
* Better appearance of customer history report filter screen (Chris T)
* Fixed new Dynatable.tex not handling col ids with underscores (Chris T)
* Fixed admin passwd reset directing to showing new user screen (Chris T)
* Fixed admin passwd reset ineffective (Chris T, bug 3599803)
* Fixed stylesheet cannot be set on preferences screen (Chris T, 3599804)
* Moved Fixes.sql to top of LOADORDER to fix some upgrade issues (Chris T)
* Fixing handling of unknown browsers in logout (Chris T, 3599930)
* Fixed error generating invoice when mintax threshhold not met Chris T)

Changelog for 1.3.27
* Detect whether ledgersmb.conf exists during Makefile.PL run and create if
  not (Chris T)
* Fixed prepare-company-database.sh clobbering the Apache configuration on
  every run (Chris T, 3595000)
* Fixed error sorting recon search by account (Chris T, h/t Erik H, 3589473)
* Users are now migrated with nonsense passwords from 1,2 (Chris T, 3587257)