@@ -336,7 +336,6 @@ PROCESS dynatable
                 <?lsmb END ?>
 	
     </form>
-</div>
 <?lsmb IF credit_act.id ?>
 <div class="listtop"><?lsmb text('Profit and Loss') ?></div>
 <form action="pnl.pl" method="GET"?>
@@ -363,5 +362,7 @@ PROCESS button element_data = {
 };
 ?>
 </div>
+</div>
 </form>
+</div>
 <?lsmb END # IF credit_act.id ?>
